--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
-Show generated videos on the frontend.
-
-Figure out way to manage how videos are deleted on the backend.
+Script and code should be returned in a single Gemini API call.
+Eleven labs API call should only be made once a video is able to be rendered.
 
 
 Fine-tune a model for better Manim code gen.
 Look into Monster API and Hugging Face for inference.
-Eleven labs for audio
